--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -52,4 +52,4 @@ server.modules += (
 	"mod_staticfile",
 )
 
-#url.rewrite-once = ( "^(/(?!(favicon.ico$|css/|js/|img/)).*)" => "/index.php?_url=$1" )
+url.rewrite-once = ( "^(/(?!(favicon.ico$|css/|js/|img/)).*)" => "/index.php?_url=$1" )
