--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -13,6 +13,7 @@ server.pid-file             = "/run/lighttpd.pid"
 server.username             = "www-data"
 server.groupname            = "www-data"
 server.port                 = 80
+server.tag                  = "Volistx WebShield"
 
 # strict parsing and normalization of URL for consistency and security
 # https://redmine.lighttpd.net/projects/lighttpd/wiki/Server_http-parseoptsDetails
