--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -6,7 +6,7 @@ server.modules = (
 	"mod_rewrite"
 )
 
-server.document-root        = "/mnt/e/new-personal-cloud/public"
+server.document-root        = "/var/www/html"
 server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
 server.errorlog             = "/var/log/lighttpd/error.log"
 server.pid-file             = "/run/lighttpd.pid"
